# heqet-app

./: HeqetApp.cabal  HeqetApp.hs  README.md  heqet-app.cabal
HeqetApp/: Buttons.hs  Draw.hs  Functions.hs  Interface.hs  Types.hs
HeqetApp/Interface/: Navbar.hs
static/: index.html
static/css/: main.css
