name:           HeqetApp
version:        0.1.0.0
Cabal-Version:  >=1.10
license:        GPL-3
license-file:	License
copyright:      Copyright (c) 2016 Isaac Reilly
category:       Sound
stability:      experimental
build-type:     Custom
author:         Isaac Reilly <isaac.g.reilly@gmail.com>
maintainer:     Isaac Reilly <isaac.g.reilly@gmail.com>
bug-reports:    https://github.com/Super-Fluid/history-graph/issues/
homepage:       TODO
synopsis:       GUI music score editor with output to Lilypond
description:
        put stuff here
extra-source-files:
executable heqet
  main-is: HeqetApp.hs
  hs-source-dirs: .
  ghc-options: -funbox-strict-fields -fexcess-precision
  default-extensions: 
    NondecreasingIndentation
  other-extensions:    
        MultiWayIf, 
        LambdaCase, 
        TemplateHaskell
  other-modules:
    HeqetApp.Buttons
    HeqetApp.Draw
    HeqetApp.Functions
    HeqetApp.Interface
    HeqetApp.Interface.Navbar
    HeqetApp.Types
  build-depends:
        base, 
        lens, 
        safe >=0.3 && <0.4, 
        template-haskell,
        containers >= 0.3.0.0,
        extra >= 1.4.3,
        errors >= 2.1.2,
        threepenny-gui >= 0.6.0.6,
        Heqet
  default-language:    Haskell2010
source-repository head
  type:     git
  location: https://github.com/Super-Fluid/heqet-app.git